--- a/7-ingress.yaml
+++ b/7-ingress.yaml
@@ -44,3 +44,22 @@ spec:
             name: pycrud
             port:
               number: 8080
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: pgadmin-ingress
+  namespace: dev
+spec:
+  ingressClassName: nginx
+  rules:
+  - host: postgres.lab.corp
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: pgadmin
+            port:
+              number: 8080
