--- a/k8s/6-pgadmin4.yaml
+++ b/k8s/6-pgadmin4.yaml
@@ -24,8 +24,8 @@ spec:
             memory: "64Mi"
             cpu: "250m"
           limits:
-            memory: "1024Mi"
-            cpu: "500m"
+            memory: "2G"
+            cpu: "1"
         ports:
         - containerPort: 80
         env:
